apollo-federation/src/connectors/validation/snapshots/validation_tests@headers__expressions_that_evaluate_to_invalid_types_v0_3.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/headers/expressions_that_evaluate_to_invalid_types_v0_3.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: expected union but received incompatible array\nDetails: `One<Float, Bool, String, null, None>` does not accept `[]`",
        locations: [
            11:50..11:52,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: expected union but received incompatible object\nDetails: `One<Float, Bool, String, null, None>` does not accept `{}`",
        locations: [
            12:45..12:47,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: expected union but received incompatible union\nDetails: `One<Float, Bool, String, null, None>` does not accept `One<1, {}, None>`",
        locations: [
            13:65..13:66,
            13:55..13:60,
            13:73..13:75,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.blah`: expected union but received incompatible union\nDetails: `One<Float, Bool, String, null, None>` does not accept `One<[...One<String, null>], null>`",
        locations: [
            19:10..19:27,
            21:73..21:80,
        ],
    },
]
