apollo-federation/src/connectors/validation/snapshots/validation_tests@headers__invalid_namespace_in_header_variables.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/headers/invalid_namespace_in_header_variables.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: unknown variable `$foo`, must be one of $config, $context, $request, $env",
        locations: [
            11:49..11:53,
            11:54..11:57,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: $this is not valid here, must be one of $config, $context, $request, $env",
        locations: [
            12:62..12:71,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: `$root.config.bar` must start with one of $config, $context, $request, $env",
        locations: [
            13:56..13:62,
            13:63..13:66,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: unknown variable `$foo`, must be one of $args, $config, $context, $request, $env",
        locations: [
            24:49..24:53,
            24:54..24:57,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: $status is not valid here, must be one of $args, $config, $context, $request, $env",
        locations: [
            25:62..25:69,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: $this is not valid here, must be one of $args, $config, $context, $request, $env",
        locations: [
            26:47..26:52,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: `$root.config.bar` must start with one of $args, $config, $context, $request, $env",
        locations: [
            27:56..27:62,
            27:63..27:66,
        ],
    },
]
