apollo-federation/src/connectors/validation/snapshots/validation_tests@headers__invalid_nested_paths_in_header_variables.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/headers/invalid_nested_paths_in_header_variables.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: `$args.scalar` doesn't have a field named `blah`",
        locations: [
            13:47..13:52,
            13:53..13:59,
            13:60..13:64,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.object`: `InputObject` doesn't have a field named `fieldThatDoesntExist`",
        locations: [
            18:17..18:28,
            23:59..23:79,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.enum`: `Enum` doesn't have a field named `cantHaveFields`",
        locations: [
            28:14..28:18,
            33:56..33:70,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Object.newField`: `$this` doesn't have a field named `fieldThatDoesntExist`",
        locations: [
            47:47..47:52,
            47:53..47:73,
        ],
    },
]
